infra/client-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-upload-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-upload-client
  template:
    metadata:
      labels:
        app: file-upload-client
    spec:
      containers:
        - name: file-upload-client
          image: bluestorm1288/file-upload-client:0.1.5
---
apiVersion: v1
kind: Service
metadata:
  name: file-upload-client-srv
spec:
  selector:
    app: file-upload-client
  ports:
    - name: file-upload-client
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: file-upload-client-lb
spec:
  type: LoadBalancer
  selector:
    app: file-upload-client
  ports:
    - name: file-upload-client-lb
      protocol: TCP
      port: 5000
      targetPort: 3000
